--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-284.6KB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇦🇺 澳大利亚-467.2KB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-352.6KB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
-  - {name: 🇺🇸 美国-1.01MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-2.25MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-459.6KB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇨🇳 中国-14.38MB/s(Youtube:不良林), server: 120.233.186.250, port: 3384, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.15MB/s(Youtube:不良林), server: 120.233.186.250, port: 3384, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-467.2KB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.59MB/s(Youtube:不良林), server: 120.233.186.71, port: 3384, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.32MB/s(Youtube:不良林), server: 116.129.253.134, port: 3384, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇨🇳 中国-2.02MB/s(Youtube:不良林), server: 120.233.186.71, port: 3384, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
   - {name: 🇨🇳 中国-5.11MB/s(Youtube:不良林), server: 120.233.186.71, port: 3384, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-900.7KB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇭🇰 香港-560.5KB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
+  - {name: 🇺🇸 美国-300.1KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-284.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-467.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-352.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-459.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-14.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-467.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-900.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-560.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.1KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-284.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-467.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-352.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-459.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-14.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-467.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-900.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-560.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.1KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-284.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-467.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-352.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-459.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-14.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-467.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-900.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-560.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.1KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-352.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-560.5KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-284.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-467.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-352.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-459.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-14.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-467.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-900.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-560.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.1KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-284.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-467.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-352.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-459.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-14.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-467.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-900.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-560.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.1KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-284.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-467.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-352.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-459.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-14.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-467.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-900.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-560.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.1KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-284.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-467.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-352.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇯🇵 日本-459.6KB/s(Youtube:不良林)
       - 🇨🇳 中国-14.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.15MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-467.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.11MB/s(Youtube:不良林)
+      - 🇯🇵 日本-900.7KB/s(Youtube:不良林)
+      - 🇭🇰 香港-560.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-300.1KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
