--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-459.6KB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇳 中国-14.38MB/s(Youtube:不良林), server: 120.233.186.250, port: 3384, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-467.2KB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.59MB/s(Youtube:不良林), server: 120.233.186.71, port: 3384, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.32MB/s(Youtube:不良林), server: 116.129.253.134, port: 3384, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.02MB/s(Youtube:不良林), server: 120.233.186.71, port: 3384, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-14.38MB/s(Youtube:不良林), server: 120.233.186.250, port: 3384, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.72MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇳 中国-1.49MB/s(Youtube:不良林), server: 120.233.186.250, port: 3384, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-907.8KB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇨🇳 中国-5.11MB/s(Youtube:不良林), server: 120.233.186.71, port: 3384, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
   - {name: 🇯🇵 日本-900.7KB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇭🇰 香港-560.5KB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
   - {name: 🇺🇸 美国-300.1KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇰🇷 韩国-211.5KB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-459.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.38MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-467.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-907.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.11MB/s(Youtube:不良林)
       - 🇯🇵 日本-900.7KB/s(Youtube:不良林)
       - 🇭🇰 香港-560.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-300.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-211.5KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-459.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.38MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-467.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-907.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.11MB/s(Youtube:不良林)
       - 🇯🇵 日本-900.7KB/s(Youtube:不良林)
       - 🇭🇰 香港-560.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-300.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-211.5KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-459.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.38MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-467.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-907.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.11MB/s(Youtube:不良林)
       - 🇯🇵 日本-900.7KB/s(Youtube:不良林)
       - 🇭🇰 香港-560.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-300.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-211.5KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-459.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.38MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-467.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-907.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.11MB/s(Youtube:不良林)
       - 🇯🇵 日本-900.7KB/s(Youtube:不良林)
       - 🇭🇰 香港-560.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-300.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-211.5KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-459.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.38MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-467.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-907.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.11MB/s(Youtube:不良林)
       - 🇯🇵 日本-900.7KB/s(Youtube:不良林)
       - 🇭🇰 香港-560.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-300.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-211.5KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-459.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.38MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-467.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-907.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.11MB/s(Youtube:不良林)
       - 🇯🇵 日本-900.7KB/s(Youtube:不良林)
       - 🇭🇰 香港-560.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-300.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-211.5KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-459.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-14.38MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-467.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.38MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.49MB/s(Youtube:不良林)
+      - 🇯🇵 日本-907.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-5.11MB/s(Youtube:不良林)
       - 🇯🇵 日本-900.7KB/s(Youtube:不良林)
       - 🇭🇰 香港-560.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-300.1KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-211.5KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
