--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.88MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇯🇵 日本-1.48MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇯🇵 日本-2.42MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
   - {name: 🇰🇷 韩国-1.11MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-316.1KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.41MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇨🇳 中国-2.25MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-1.65MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇫🇷 法国-685.4KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇩🇪 德国-412.0KB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
   - {name: 🇬🇧 英国-897.8KB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-1.11MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
   - {name: 🇫🇷 法国-643.4KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-2.33MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.13MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-316.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.65MB/s(Youtube:不良林)
-      - 🇫🇷 法国-685.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-412.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-897.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
       - 🇫🇷 法国-643.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-316.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.65MB/s(Youtube:不良林)
-      - 🇫🇷 法国-685.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-412.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-897.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
       - 🇫🇷 法国-643.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-316.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.65MB/s(Youtube:不良林)
-      - 🇫🇷 法国-685.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-412.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-897.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
       - 🇫🇷 法国-643.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-316.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.65MB/s(Youtube:不良林)
-      - 🇫🇷 法国-685.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-412.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-897.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
       - 🇫🇷 法国-643.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-316.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.65MB/s(Youtube:不良林)
-      - 🇫🇷 法国-685.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-412.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-897.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
       - 🇫🇷 法国-643.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-316.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.65MB/s(Youtube:不良林)
-      - 🇫🇷 法国-685.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-412.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-897.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
       - 🇫🇷 法国-643.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.48MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.11MB/s(Youtube:不良林)
+      - 🇺🇸 美国-316.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.41MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.65MB/s(Youtube:不良林)
-      - 🇫🇷 法国-685.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-412.0KB/s(Youtube:不良林)
       - 🇬🇧 英国-897.8KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.11MB/s(Youtube:不良林)
       - 🇫🇷 法国-643.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
